fix modal box on mobile view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,9 +57,9 @@ svg { touch-action: none; }
 
 #popup-form {
     position: fixed;
-    bottom: 5vh;
-    left: 15vw;
-    right: 15vw;
+    bottom: 2vh;
+    left: 5vw;
+    right: 5vw;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     z-index: 1002;
     justify-content: space-between;
@@ -69,7 +69,7 @@ svg { touch-action: none; }
 #popup-form h3 {
     font-family: Satoshi-Black; 
     opacity: 50%;
-    font-size: 1.5rem; /* Default for mobile */
+    font-size: 1.3rem; /* Default for mobile */
 }
 #pin-message {
     font-family: Satoshi-Black;
@@ -81,13 +81,13 @@ svg { touch-action: none; }
     display: flex;
     flex-grow: 1;
     resize: none;
-    font-size: 1rem; /* Default for mobile */
+    font-size: 0.8rem;
 }
 #submit-pin {
     background: none;
     border: none;
     font-family: Satoshi-Black;
-    font-size: 1rem; /* Default for mobile */
+    font-size: 0.8rem;
     cursor: pointer;
 }
 
@@ -97,7 +97,7 @@ svg { touch-action: none; }
     border: 13px solid #FF96E4;
     border-radius: 50px;
     padding: 30px;
-    font-size: 1rem; /* Default for mobile */
+    font-size: 0.8rem;
 }
 
 .popup .close {
@@ -137,7 +137,7 @@ svg { touch-action: none; }
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     font-family: Satoshi-Regular;
-    font-size: 0.9rem; /* Default for mobile */
+    font-size: 0.9rem;
     max-width: 300px;
     word-wrap: break-word;
     z-index: 1004;
@@ -148,8 +148,15 @@ svg { touch-action: none; }
 
 /* Styles for larger screens (tablet and desktop) */
 @media (min-width: 768px) {
+    #popup-form {
+        left: 15vw;
+        right: 15vw;
+        bottom: 5vh;
+    }
+
     #popup-form h3 {
         font-size: 2rem;
+        
     }
     #pin-message {
         font-size: 1.5rem;
